<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName" translatable="false">Kahf Browser</string>
    <string name="facebook_app_id" translatable="false">1065904702070183</string>
    <string name="facebook_client_token" translatable="false">3f9fdd9ae789fab1a44a977a901b7d45</string>
    <string name="appDescription" translatable="false">Kahf Browser</string>
    <string name="asilLogoDescription">Kahf logo</string>
    <string name="asilPrivacySimplified">Privacy, simplified</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="onboardingDefaultBrowserDescription">Visit Settings to search and browse with Kahf every time.</string>
    <string name="onboardingDefaultBrowserTitle">Make Kahf your default</string>
    <string name="cannotLaunchDefaultAppSettings">Can\'t launch default app settings screen</string>
    <string name="settingsDefaultBrowserEnabled">Set as Default Browser</string>
    <string name="defaultBrowserMaybeLater">Maybe Later</string>
    <string name="defaultBrowserLetsDoIt">Set as Default Browser</string>
    <string name="defaultBrowserDescriptionNoDefault">Open links with peace of mind, every time.</string>
    <string name="defaultBrowserInstructions">Select Kahf and tap <font color='#678fff'>Always</font>.</string>
    <string name="browserPopupMenu">Browser menu</string>
    <string name="refresh">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="omnibarInputHint">Search or type URL</string>
    <string name="clearButtonContentDescription">Clear search input</string>
    <string name="no_compatible_third_party_app_installed">No compatible app installed</string>
    <string name="addBookmarkMenuTitle">Add Bookmark</string>
    <string name="editBookmarkMenuTitle">Edit Bookmark</string>
    <string name="addFavoriteMenuTitle">Add Favorite</string>
    <string name="removeFavoriteMenuTitle">Remove Favorite</string>
    <string name="favoriteAddedMessage">Favorite added</string>
    <string name="bookmarkAddedMessage">Bookmark added</string>
    <string name="requestDesktopSiteMenuTitle">Desktop Site</string>
    <string name="fireproofWebsiteMenuTitleRemove">Remove Fireproofing</string>
    <string name="requestMobileSiteMenuTitle">Mobile Site</string>
    <string name="downloadsMenuTitle">Downloads</string>
    <string name="printMenuTitle">Print Page</string>
    <string name="favoriteDeleteConfirmationMessage">Favorite removed</string>
    <string name="fireproofDeleteConfirmationMessage">Fireproofing removed</string>
    <string name="privacyProtectionEnabledConfirmationMessage" instruction="Placeholder is a website">Privacy Protection enabled for %1$s</string>
    <string name="privacyProtectionDisabledConfirmationMessage" instruction="Placeholder is a website">Privacy Protection disabled for %1$s</string>
    <string name="undoSnackbarAction">Undo</string>
    <string name="downloadImage">Download Image</string>
    <string name="permissionRequiredToDownload">Downloading requires storage permission</string>
    <string name="options">Options</string>
    <string name="shareLink">Share Link</string>
    <string name="shareMenuTitle">Share</string>
    <string name="copyUrl">Copy Link Address</string>
    <string name="findInPageMenuTitle">Find in Page</string>
    <string name="nextSearchTermDescription">Find next</string>
    <string name="previousSearchTermDescription">Find previous</string>
    <string name="closeFindInPageButtonDescription">Close find in page view</string>
    <string name="findInPageHint">Find in page</string>
    <string name="findInPageMatches" translatable="false">%1$d/%2$d</string>
    <string name="editQueryBeforeSubmitting">Edit query before searching</string>
    <string name="settingsAutocompleteEnabled">Autocomplete Suggestions</string>
    <string name="openExternalApp">Open External App</string>
    <string name="launchingExternalApp">Open in another app</string>
    <string name="confirmOpenExternalApp">Would you like to leave Kahf to view this content?</string>
    <string name="unableToOpenLink">Unable to open this type of link</string>
    <string name="homeTab" translatable="false">Kahf</string>
    <string name="tabActivityTitle">Tabs</string>
    <string name="tabsMenuItem">Tabs</string>
    <string name="newTabMenuItem">New Tab</string>
    <string name="openInNewTab">Open in New Tab</string>
    <string name="openInNewBackgroundTab">Open in Background Tab</string>
    <string name="openImageInNewTab">Open Image in Background Tab</string>
    <string name="faviconContentDescription">Favicon</string>
    <string name="closeContentDescription">Close</string>
    <string name="closeAllTabsMenuItem">Close All Tabs</string>
    <string name="closeTab">Close Tab</string>
    <string name="tabClosed">Tab closed</string>
    <string name="tabClosedUndo">Undo</string>
    <string name="downloadsMenuItemTitle">Downloads</string>
    <string name="fireMenu">Clear Data</string>
    <string name="fireClearAll">Clear All Tabs And Data</string>
    <string name="fireCancel">Cancel</string>
    <string name="fireDataCleared">Data cleared</string>
    <string name="settingsActivityTitle">Settings</string>
    <string name="settingsMenuItemTitle">Settings</string>
    <string name="settingsHeadingPrivacy">Privacy</string>
    <string name="settingsHeadingAppearance">Appearance</string>
    <string name="settingsHeadingCustomize">Customize</string>
    <string name="settingsHeadingAbout">About</string>
    <string name="settingsAboutAsil">About Kahf</string>
    <string name="settingsVersion">Version</string>
    <string name="settingsVersionFull" translatable="false">Version: %1$s (%2$s) - JS %3$s</string>
    <string name="leaveFeedback">Share Feedback</string>
    <string name="settingsEmailProtectionTitle">Email Protection</string>
    <string name="settingsEmailProtectionSubtitle">Block email trackers and hide your address</string>
    <string name="settingsHeadingMore">More From Kahf</string>
    <string name="settingsLightTheme">Light</string>
    <string name="settingsTheme">Theme</string>
    <string name="settingsDarkTheme">Dark</string>
    <string name="settingsSystemTheme">System Default</string>
    <string name="settingsThemeDialogSave">Set Theme</string>
    <string name="settingsTitleAppLinks">Open Links in Apps</string>
    <string name="settingsTitleAppLinksDialog">Open links in apps</string>
    <string name="settingsAppLinksAskEveryTime">Ask every time</string>
    <string name="settingsAppLinksAlways">Always</string>
    <string name="settingsAppLinksNever">Never</string>
    <string name="settingsTitleNotifications">Notifications</string>
    <string name="settingsSubtitleNotificationsDisabled">Disabled</string>
    <string name="settingsSubtitleNotificationsEnabled">Enabled</string>
    <string name="settingsDefaultBrowserTitle">Default Browser</string>
    <string name="settingsDefaultBrowserSetDescription">Kahf is your default browser</string>
    <string name="settingsDefaultBrowserNotSetDescription">Make Kahf your default browser</string>
    <string name="settingsPrivateSearchTitle">Private Search</string>
    <string name="settingsPrivateSearchDescription">Enabled by default</string>
    <string name="settingsWebTrackingProtectionTitle">Web Tracking Protection</string>
    <string name="settingsWebTrackingProtectionDescription">Enabled by default</string>
    <string name="settingsHeadingSettings">Settings</string>
    <string name="settingsDownloadLocation">Download location</string>
    <string name="settingsPermissionsSetting">Permissions</string>
    <string name="settingsSyncSetting">Sync &amp; Backup</string>
    <string name="settingsFireButton">Fire Button</string>
    <string name="privateSearchActivityTitle">Private Search</string>
    <string name="privateSearchTitle">Private Search is Enabled</string>
    <string name="privateSearchDescription">Kahf Private Search is your default search engine, so you can search the web without being tracked.</string>
    <string name="privateSearchHeadingSearchSettings">Search Settings</string>
    <string name="languageSettings">Language</string>
    <string name="privateSearchMoreSearchSettingsPrimaryText">More Search Settings</string>
    <string name="privateSearchMoreSearchSettingsSecondaryText">Customize your search language, region, and more</string>
    <string name="privateSearchMoreSearchSettingsTitle">More Search Settings</string>
    <string name="privateSearchAutocompleteToggle">Autocomplete Suggestions</string>
    <string name="privateSearchAutocompleteHint">Show search suggestions as you type, including your bookmarks. All searches are private.</string>
    <string name="privateSearchAutocompleteRecentlyVisitedSitesToggle">Recently Visited Sites</string>
    <string name="privateSearchAutocompleteRecentlyVisitedSitesHint">Show recently visited sites in search suggestions. Recently visited sites are private, only stored on your device, and can be cleared with the Fire Button.</string>
    <string name="improvedAutoCompleteIAMContent">Autocomplete Suggestions now include your recently visited sites. Turn off in Settings, or clear anytime with the 🔥 Fire Button.</string>
    <string name="improvedAutoCompleteIAMTitle">Same privacy.\nBetter search suggestions!</string>
    <string name="openAutoCompleteSettings">Open Settings</string>
    <string name="webTrackingProtectionActivityTitle">Web Tracking Protection</string>
    <string name="webTrackingProtectionLearnMoreTitle">Web Tracking Protection</string>
    <string name="webTrackingProtectionTitle">Web Tracking Protection is Enabled</string>
    <string name="webTrackingProtectionDescription"><![CDATA[Kahf never tracks you and we aim to protect your privacy as much as possible. We continually maintain and develop layers of protection to keep up with new tracking methods and provide many protections that other browsers don’t offer by default. <u><a href="">Learn More</a><u/>]]></string>
    <string name="cookiePopupProtectionTitle">Cookie Pop-Up Protection</string>
    <string name="cookiePopupProtectionDescription">Banish these pop-ups &amp; minimize cookies</string>
    <string name="cookiePopupProtectionEnabled">Enabled</string>
    <string name="fireButtonActivityTitle">Fire Button</string>
    <string name="permissionsActivityTitle">Permissions</string>
    <string name="appearanceActivityTitle">Appearance</string>
    <string name="settingsAutomaticallyClearingDialogSave">Save</string>
    <string name="settingsAutomaticallyClearWhat">Automatically Clear…</string>
    <string name="settingsAutomaticallyClearWhatDialogTitle">Automatically clear…</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="linkedin">LinkedIn</string>
    <string name="kahf_select_apps">Apps</string>
    <string name="kahf_onboarding_skip">Skip</string>
    <string name="kahf_onboarding_subtitle">Experience a safer internet with Kahf Browser. Powered by advanced AI, it filters out indecent images and harmful content in real time, allowing you to browse while staying true to your moral values.</string>
    <string name="kahf_onboarding_title">Private, Safe and Decent browsing -\nPowered by AI</string>
    <string name="kahf_onboarding_next">Next</string>
    <string name="kahf_onboarding_skip_now">Skip for now</string>
    <string name="kahf_onboarding_choose">Choose\nthe app you \nuse most</string>
    <string name="kahf_onboarding_choose_details">Select your favorite apps to keep them handy in your home screen</string>
</resources>