<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_menu_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/keyline_2">

        <com.duckduckgo.common.ui.view.MenuItemView
            android:id="@+id/newTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconDrawable="@drawable/ic_add_circle"
            app:primaryText="@string/newTabMenuItem" />

        <com.duckduckgo.common.ui.view.divider.HorizontalDivider
            style="@style/Widget.DuckDuckGo.PopupMenuHorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.duckduckgo.common.ui.view.MenuItemView
            android:id="@+id/closeAllTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconDrawable="@drawable/ic_close_24_small"
            app:primaryText="@string/closeAllTabsMenuItem" />

        <com.duckduckgo.common.ui.view.divider.HorizontalDivider
            android:id="@+id/closeAllTabsDivider"
            style="@style/Widget.DuckDuckGo.PopupMenuHorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.duckduckgo.common.ui.view.MenuItemView
            android:id="@+id/downloads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconDrawable="@drawable/ic_download_dotted"
            app:primaryText="@string/downloadsMenuItemTitle" />

        <com.duckduckgo.common.ui.view.divider.HorizontalDivider
            style="@style/Widget.DuckDuckGo.PopupMenuHorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.duckduckgo.common.ui.view.MenuItemView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconDrawable="@drawable/ic_settings_filled"
            app:primaryText="@string/settingsMenuItemTitle" />

    </LinearLayout>

</LinearLayout>