<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_bg_2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/kahf_onboarding_title"
        android:textColor="@color/kahf_onboarding_title"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/subtitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DeprecatedWidgetInXml,InvalidColorAttribute" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/kahf_onboarding_subtitle"
        android:textColor="?attr/daxColorBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/btnDefaultBrowser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DeprecatedWidgetInXml" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnDefaultBrowser"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/kahf_onboarding_button_2"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="InvalidColorAttribute">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/defaultBrowserLetsDoIt"
            android:textColor="?attr/daxColorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="DeprecatedWidgetInXml" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="5dp"
        android:text="@string/kahf_onboarding_skip"
        android:textColor="@color/kahf_onboarding_skip"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDefaultBrowser"
        tools:ignore="DeprecatedWidgetInXml,InvalidColorAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>
